@@ -32,7 +32,7 @@ $sql = array();
 $sql[] = 'CREATE TABLE IF NOT EXISTS `' . _DB_PREFIX_ . 'packetery_order` (
             `id_order` int,
             `id_cart` int,
-            `id_branch` int NOT NULL,
+            `id_branch` int NULL,
             `name_branch` varchar(255) NOT NULL,
             `currency_branch` char(3) NOT NULL,
             `is_cod` tinyint(1) NOT NULL DEFAULT 0,
