@@ -20,7 +20,16 @@ function upgrade_module_2_1_6($object)
         'displayOrderConfirmation',
         'displayOrderDetail',
         'sendMailAlterTemplateVars',
+        'actionObjectOrderUpdateBefore',
     ]);
+    if ($result === false) {
+        return false;
+    }
+
+    $result = Db::getInstance()->execute('
+        ALTER TABLE `' . _DB_PREFIX_ . 'packetery_order`
+        CHANGE `id_branch` `id_branch` int(11) NULL;
+    ');
     if ($result === false) {
         return false;
     }
