@@ -52,3 +52,4 @@
       - Updated: using native configuration storage (https://devdocs.prestashop.com/1.7/modules/creation/#the-configuration-object )
         and removal of packetery_settings table
       - Added: verifying that the sender indication exists using the senderGetReturnRouting API point
+      - Fixed: corrected behavior when changing carrier or address in order administration
